Fixed horizontal scrollbar issue

--- a/src/components/HorizontalScrollbar/HorizontalScrollbar.css
+++ b/src/components/HorizontalScrollbar/HorizontalScrollbar.css
@@ -29,9 +29,3 @@
 .left-arrow:hover {
   transform: scale(1.3, 1.3);
 }
-
-.react-horizontal-scrolling-menu--wrapper {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
